# delb-py

./: .coveragerc  .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGES.rst  CITATION.cff  CITATION.cff.tmpl  Justfile  Makefile  README.rst  ROADMAP.md  file1.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/scripts/: make-github-release.py  release-notes-pandoc-filter.py
.github/templates/: CITATION.cff.j2
.github/workflows/: benchmarks.yml  linkcheck.yml  publish.yml  quality-checks.yml  release.yml  update-dependencies.yml
_delb/: __init__.py  builder.py  exceptions.py  filters.py  grammar.py  names.py  nodes.py  parser.py  rfc3987.py  serializer.py  typing.py  utils.py  xpath.py
_delb/parser/: __init__.py  base.py  expat.py  lxml.py  utils.py
_delb/plugins/: __init__.py  core_loaders.py  expat_parser.py  https_loader.py  lxml_parser.py  web_loader.py
_delb/xpath/: __init__.py  ast.py  functions.py  parser.py  tokenize.py  tokenizer.py  xpath.gram
benchmarks/: conftest.py  test_common_operations.py  test_normalizing_documents.py  test_parsing.py  test_reading_and_parsing.py  test_serialization.py
benchmarks/docs/: carus_zoologie_1872.TEI-P5.xml  schroeder_logik0201_1891.TEI-P5.xml
delb/: __init__.py  exceptions.py  filters.py  loaders.py  names.py  nodes.py  parser.py  transform.py  typing.py  utils.py  xpath.py
delb/plugins/: __init__.py  specs.py
delb/plugins/contrib/: __init__.py  core_loaders.py  https_loader.py
docs/: Makefile  api-note.rst  api.rst  conf.py  design.rst  extending.rst  getting_started.ipynb  glossary.rst  index.html  index.rst  installation.rst  license.rst  rtd-dependencies.txt
docs/_build/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_static/: styles.css
docs/api/: documents.rst  exceptions.rst  extending.rst  index.rst  nodes.rst  querying.rst  serialization-example-delb-indented.xml  serialization-example-delb-wrapped.xml  serialization-example-input.xml  serialization.rst  transformations.rst  typing.rst  utilities.rst
docs/api/_includes/: serialization-example-delb-indented.xml  serialization-example-delb-wrapped.xml  serialization-example-input.xml  serialization-example-lxml.xml  serialization-example-minidom.xml  serialization-example-mixed-format.xml  serialization-mixed-format-recipe.py
docs/sphinx-extensions/: class_members_categories.py  namedtuples.py
integration-tests/: .gitignore  README.md  fetch-corpora.py  normalize-corpora.py  requirements.txt  test-location-paths.py  test-parse-serialize-equality.py  utils.py
lxml_domesque/: __init__.py  caches.py  exceptions.py  loaders.py  nodes.py  typing.py  utils.py  xpath.py
tests/: conftest.py  test_aaa_setup_wrapper_cache.py  test_assorted.py  test_attributes.py  test_builder.py  test_comment_and_pi_nodes.py  test_css_select.py  test_document.py  test_filters.py  test_loaders.py  test_model.py  test_names.py  test_nodes.py  test_parser.py  test_parsing.py  test_parsing_w3c_conformity.py  test_printing.py  test_queries.py  test_read_write.py  test_reduce_whitespace.py  test_rfc3987.py  test_serialization.py  test_siblings.py  test_subclasses.py  test_tag_node.py  test_text_node.py  test_text_nodes.py  test_transform.py  test_traversers.py  test_utils.py  test_writing.py  test_xml_parser.py  test_xpath.py  test_xpath_evaluation.py  test_xpath_fetch_or_create.py  test_xpath_legacy.py  test_xpath_parser.py  test_xpath_results.py  test_xpath_tokenizer.py  test_zzz_wrapper_cache.py  (+1 more)
tests/files/: .gitignore  external_dtd.dtd  external_dtd.xml  gsa_390707-reference.xml  initial_processing_instructions.xml  marx_manifestws_1848.TEI-P5.xml  mixed-formatting-reference.xml  root_siblings.xml  serialization-example-indented-reference.xml  serialization-example-input.xml  serialization-example-wrapped-reference.xml  stevenson_treasure_island.xml  tei_CASE80043.xml  tei_GRE0017_Xatzopoulos_agapi_sto_xwrio.xml  tei_UKR19121_KotsiubynskyiTiniZabutykhPredkiv.xml  tei_gsa_390707.xml  tei_macrogenesis ▸ empty.xml  tei_marx_manifestws_1848.TEI-P5.xml  web_dtd.ignored_xml
tests/plugins/: __init__.py
tests/test_use_cases/: test_mixed_formatting.py  test_tei_toc.py
tests/w3c_conformance_test_suite_20020606/: xmlconf-20020606.htm  xmlconf-20020606.xml  xmlconformance.xsl
tests/w3c_conformance_test_suite_20020606/ibm/not-wf/P13/: ibm13n03.xml
tests/w3c_conformance_test_suite_20020606/ibm/not-wf/p28a/: ibm28an01.xml
tests/w3c_conformance_test_suite_20020606/ibm/valid/P01/: ibm01v01.xml
tests/w3c_conformance_test_suite_20020606/ibm/valid/P09/: student.dtd
tests/w3c_conformance_test_suite_20020606/ibm/valid/P12/: student.dtd
tests/w3c_conformance_test_suite_20020606/ibm/valid/P22/: ibm22v01.xml  ibm22v05.xml  ibm22v06.xml  ibm22v07.xml
tests/w3c_conformance_test_suite_20020606/ibm/valid/P28/: ibm28v02.xml
tests/w3c_conformance_test_suite_20020606/ibm/valid/P29/: ibm29v01.xml  ibm29v02.xml
